--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>About myself </title>
-    </head>
-    <body>
-        <h1> Harika Madamanchi</h1>
-        <p> I'm harika madamanchi from guntur, andhra pradesh and currently pursuing masters in northwest missouri state university</p>
-    
-        <h6>London museums</h6>
-        <p>
-            London museums dominate the next few spaces on our list of the world’s most visited museums, with Tate Modern coming in at 6th place.Visitors to <b>Tate Modern</b> can explore Tate’s collection of British and <b>international modern</b> and contemporary art from 1900 to the present. Tate Museum is housed in one of London’s historic buildings, the former Bankside Power Station. Here, it is able to display very large pieces in the huge Turbine Hall.
-        </p>
-    </body>
+
+<head>
+    <title>About myself </title>
+</head>
+
+<body>
+    <h1> Harika Madamanchi</h1>
+    <p> I'm harika madamanchi from guntur, andhra pradesh and currently pursuing masters in northwest missouri state
+        university</p>
+
+    <h6>London museums</h6>
+    <p>
+        London museums dominate the next few spaces on our list of the world’s most visited museums, with Tate Modern
+        coming in at 6th place.Visitors to <b>Tate Modern</b> can explore Tate’s collection of British and
+        <b>international modern</b> and contemporary art from 1900 to the present. Tate Museum is housed in one of
+        London’s historic buildings, the former Bankside Power Station. Here, it is able to display very large pieces in
+        the huge Turbine Hall.
+    </p>
+
+    <hr />
+    <h1>Ordered list of museum</h1>
+    <ol>
+        <li>
+            The nearest airport to Tate Modern is London City (LCY).
+        </li>
+        <li>
+            However, there are better options for getting to Tate Modern.
+        </li>
+        <li>
+            Thameslink operates a train from Gatwick Airport to London Bridge every 15 minutes. Tickets cost $14 - $18
+            and the journey takes 40 min.
+            <ol>
+                <li>
+                    The nearest airport to Tate Modern is London City (LCY).
+                </li>
+                <li>
+                    However, there are better options for getting to Tate Modern.
+                </li>
+            </ol>
+            
+        </li>
+        <li>
+            Southern Service also services this route 3 times a day.
+        </li>
+    </ol>
+</body>
+
 </html>
