--- a/index.html
+++ b/index.html
@@ -75,7 +75,36 @@
 
     <a href="aboutme.html">ABOUT ME</a>
 
-
+    <hr />
+    <h1>Recommended places to visit.</h1>
+    <p>Below I have listed some recommened places to visit and i'm sure you love them.</p>
+    <table border="1">
+        <tr>
+            <th>City</th>
+            <th>location</th>
+            <th>time</th>
+        </tr>
+        <tr>
+            <td>hyderabad</td>
+            <td>moosapet</td>
+            <td>07:30</td>
+        </tr>
+        <tr>
+            <td>canada</td>
+            <td>toronto</td>
+            <td>9:00</td>
+        </tr>
+        <tr>
+            <td>usa</td>
+            <td>missouri</td>
+            <td>10:00</td>
+        </tr>
+        <tr>
+            <td>Banglore</td>
+            <td>vasanth nagar</td>
+            <td>08:30</td>
+        </tr>
+    </table>
 </body>
 
 </html>
