--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <p>
+        <a href="bonus.html">MY BONUS</a>
+    </p>
     <h1> Harika Madamanchi</h1>
     <p> I'm harika madamanchi from guntur, andhra pradesh and currently pursuing masters in northwest missouri state
         university</p>
